[package]
name = "bandcamp_recommendations"
version = "0.2.2"
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/fabi321/bandcamp_recommendations"
description = "Recommend bandcamp albums"

[dependencies]
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
soup = "0.5"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
snafu = "0.8"
actix-web = "4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
fallible-iterator = "0.3"
clap = { version = "4", features = ["derive"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
mime = "0.3"
